...

      <Controller
        control={control}
        name="email"
        render={({ field: { onChange, value } }) => (
          <Input
            testID="login-email-input"
            label={t('auth.email')}
            leftIconName="mail-outline"
            placeholder={t('auth.emailPlaceholder')}
            value={value}
            onChangeText={onChange}
            keyboardType="email-address"
...
            {t('footer.privacy')}
          </Text>
        </HStack>
      </View>

      <Button
        testID="continue-as-guest-button"
        variant="outline"
        size="lg"
        fullWidth
        title={t('auth.continueAsGuest')}
        onPress={f.continueAsGuest}
        disabled={f.loginMutation.isPending}
...
