...
      )}

      <Snackbar
        visible={f.snackbar.visible}
        onDismiss={() => f.setSnackbar({ ...f.snackbar, visible: false })}
        duration={2000}
        action={{ label: 'Sepete Git', onPress: () => router.push('/cart') }}
      >
        {f.snackbar.message}
      </Snackbar>
    </View>
  );
}
...
