...
            onPress={onBuyNow}
          />

          {inCart ? (
            <ActionTile testID="product-detail-go-to-cart-button" icon="checkmark-circle" label={t('product.inCartShort')} onPress={onGoToCart} />
          ) : (
            <ActionTile testID="product-detail-add-to-cart-button" icon="cart" label={t('product.addToCart')} onPress={onAddToCart} />
          )}
        </View>
      )}
    </View>
  );
}
...
